# LLMOPS

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: custom_exception.py
multi_doc_chat/logger/: customlogger.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
notebooks/: Evaluation.ipynb
tests/integration/: test_upload_route.py
